Added project with image upload feature
